src/objects/Motorola_Core_Directory__c.object
<CustomObject>
    <description>Motorola Core Directory object kept updated with LDAP through the NPI Dashboard via IOD daily job.</description>
    <fields>
        <fullName>Commerce_ID__c</fullName>
        <label>Commerce ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractorCompany__c</fullName>
        <label>Contractor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractorID__c</fullName>
        <label>Contractor ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreID__c</fullName>
        <externalId>true</externalId>
        <label>Core ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryStatus__c</fullName>
        <inlineHelpText>A = Active: Actively employed employee or contractor
D = Deleted: No longer an active employee or contractor</inlineHelpText>
        <label>Directory Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryType__c</fullName>
        <inlineHelpText>E = Employee
N = Contractor</inlineHelpText>
        <label>Directory Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayFirstName__c</fullName>
        <label>Display First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayLastName__c</fullName>
        <label>Display Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeType__c</fullName>
        <label>Employee Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Brazil_Spend__c</fullName>
        <label>Expected Brazil Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FriendlyEmailAddress__c</fullName>
        <label>Friendly Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GivenName__c</fullName>
        <label>Given Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRStatus__c</fullName>
        <label>HR Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSeniorMgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Senior Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_First_CoreID__c</fullName>
        <formula>DisplayLastName__c &amp; &quot;_&quot; &amp;   DisplayFirstName__c &amp; &quot; - &quot; &amp;  CoreID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last_First - CoreID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMID__c</fullName>
        <inlineHelpText>Google Apps ID</inlineHelpText>
        <label>MMID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Core_ID__c</fullName>
        <description>Manager Core ID</description>
        <label>Manager Core ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>Nick Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel1MgrCoreID__c</fullName>
        <label>Org Level 1 Mgr CoreID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel1MgrFullName__c</fullName>
        <label>Org Level 1 Mgr Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel1__c</fullName>
        <label>Org Level 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel2MgrCoreID__c</fullName>
        <label>Org Level 2 Mgr CoreID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel2MgrFullName__c</fullName>
        <label>Org Level 2 Mgr Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel2__c</fullName>
        <label>Org Level 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel3MgrCoreID__c</fullName>
        <label>Org Level 3 Mgr CoreID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel3MgrFullName__c</fullName>
        <label>Org Level 3 Mgr Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgLevel3__c</fullName>
        <label>Org Level 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLT_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLT +1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Motorola Core Directory</relationshipLabel>
        <relationshipName>SLT_1_Dir</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupervisorCommerceID__c</fullName>
        <label>Supervisor Commerce ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurName__c</fullName>
        <label>Surname</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSLTPlus1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A member of org level 1, 2 or 3, Org Level 1= CEO.</inlineHelpText>
        <label>isSLTPlus1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSLT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A member of org level 1 or 2, Org Level 1= CEO.</inlineHelpText>
        <label>isSLT</label>
        <type>Checkbox</type>
    </fields>
    <label>Motorola Core Directory</label>
    <listViews>
        <fullName>IsSLTPlusOne</fullName>
        <columns>NAME</columns>
        <columns>CoreID__c</columns>
        <columns>OrgLevel1__c</columns>
        <columns>OrgLevel2__c</columns>
        <columns>OrgLevel3__c</columns>
        <columns>OrgLevel4__c</columns>
        <columns>OrgLevel5__c</columns>
        <columns>Mail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isSLTPlus1__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IsSLTPlusOne</label>
    </listViews>
    <listViews>
        <fullName>isSLT</fullName>
        <columns>NAME</columns>
        <columns>CoreID__c</columns>
        <columns>OrgLevel1__c</columns>
        <columns>OrgLevel2__c</columns>
        <columns>OrgLevel3__c</columns>
        <columns>OrgLevel4__c</columns>
        <columns>OrgLevel5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isSLT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>isSLT</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motorola Core Directory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>